--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /TestApp/TestApp
+/TestApp/packages
+/TestApp/.vs/TestApp
+/TestApp
+/.vs
